@@ -91,8 +91,6 @@ zbx_graph_item_type;
 #define TRIGGER_DESCRIPTION_LEN_MAX	TRIGGER_DESCRIPTION_LEN+1
 #define TRIGGER_EXPRESSION_LEN		255
 #define TRIGGER_EXPRESSION_LEN_MAX	TRIGGER_EXPRESSION_LEN+1
-#define TRIGGER_URL_LEN			255
-#define TRIGGER_URL_LEN_MAX		TRIGGER_URL_LEN+1
 #define TRIGGER_ERROR_LEN		128
 #define TRIGGER_ERROR_LEN_MAX		TRIGGER_ERROR_LEN+1
 
@@ -142,7 +140,7 @@ zbx_graph_item_type;
 #define ITEM_DELAY_FLEX_LEN_MAX		ITEM_DELAY_FLEX_LEN+1
 #define ITEM_IPMI_SENSOR_LEN		128
 #define ITEM_IPMI_SENSOR_LEN_MAX	ITEM_IPMI_SENSOR_LEN+1
-#define ITEM_PARAMS_LEN			2048
+#define ITEM_PARAMS_LEN			65535
 #define ITEM_PARAMS_LEN_MAX		ITEM_PARAMS_LEN+1
 #define ITEM_USERNAME_LEN		64
 #define ITEM_USERNAME_LEN_MAX		ITEM_USERNAME_LEN+1
